- Added warning messages when is tried to import data from an external file or before are sent CDR requests for Catalogue deletion or Party deregistration.

Improvements:

- Simplified My Party registration process, now consisted of only two calls to the CDR service. Updating My Party data is now superfluos during the registration of a party.
- Removed option for pulling of My Catalogue, which is now part of new "getting new documents" feature. 
- When appropriate OK buttons in dialogs are set as default buttons. Those dialogs could be closed by pressing Enter key.

Bug fixes:

- Fixed bug not showing error message when is tried to import non-existing file.
- Fixed bug not allowing nodes in the tree view of Parties to have the same name.

--------------------

Ruta Client 0.1.0
This is the first minor release of Ruta Client Application. From now on Ruta will mostly follow semantic versioning scheme.

Features:

- Embedded eXist database is used as a local data store instead of the files.
- Implemented support for exploration of reported bugs and sending comments on those reports.
- Secured local data in some cases of JVM shutdown.
- Implemented check during program startup that tries to find out whether the program has been already started. Only one instance of the program (residing in the same OS directory) is allowed.
- Added logging capability.

Bug fixes:

- Fixed bug that was allowing non-registered users to send a bug report.
- Fixed bug My Party dialog not showing what is the requested format of the Registration date.
- Fixed bug not being able to close My Party dialog by pressing the Cancel button after incorrect date had been entered.
- Fixed bug not verifying input username and password during My Party registration process.
- Fixed bug not removing My Catalogue from My Party in the Following parties, after Catalogue could not be found on the CDR service.
- Fixed other minor bugs.

--------------------

Ruta Client 0.0.3