@@ -1,7 +1,7 @@
 #Ruta Client properties
-#Tue Feb 20 14:48:33 CET 2018
+#Tue Feb 20 17:56:20 CET 2018
 mainFrame.height=831
-started=false
+started=true
 mainFrame.title=Ruta Client - Ruta Client - Rutasd
 mainFrame.top=69
 D\:\\Fakultet\\_Diplomski\\_diplomski\ rad\\git\\RutaClient=false
