@@ -1,0 +1,11 @@
+package rs.ruta.client;
+
+public class ProductException extends Exception
+{
+	private static final long serialVersionUID = -4555159805430354799L;
+
+	public ProductException(String message)
+	{
+		super(message);
+	}
+}
